--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
-<h1>Cabecera página</h1>
+<h1>Casco Romano</h1>
 <p>
-    Texto previo
+    Estamos ante un gemelo digital de un casco romano
 </p>
 <x3d width='800px' height='800px'>
 <scene>
@@ -20,7 +20,7 @@
 </scene>
 </x3d>
 <p>
-    Texto final
+    Para poder ver in situ dicho casco acuda al museo provincial de...
 </p>
   </body>
 </html>
